Fix spacing of activities/project on team page

--- a/assets/sass/39alpha/layout.scss
+++ b/assets/sass/39alpha/layout.scss
@@ -827,9 +827,13 @@
         &--horizontal {
             display: flex;
             justify-content: space-evenly;
+            text-align: left;
 
             div {
                 flex-grow: 1;
+                flex-shrink: 1;
+                flex-basis: 100%;
+                min-width: content-width;
                 padding-left: 10%;
                 padding-right: 10%;
 
@@ -847,7 +851,6 @@
                 border: none;
 
                 div {
-                    flex-grow: 1;
                     padding-left: 0;
                     padding-right: 0;
 
